manifests/longhorn/overlay/patch_daemonset_longhorn-manager.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-manager
  namespace: longhorn-system
spec:
  selector:
    spec:
      nodeSelector:
        storage: longhorn
