manifests/longhorn/overlay/patch_deployment_longhorn-driver-deployer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
  namespace: longhorn-system
spec:
  template:
    spec:
      nodeSelector:
        storage: longhorn
