manifests/longhorn/overlay/patch_deployment_longhorn-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  template:
    spec:
      nodeSelector:
        storage: longhorn
